base settings and auth added
